# airline

git_hub_proj/python-project/: README.md  flake.nix  pyproject.toml  requirements.txt
git_hub_proj/python-project/ai-usage-card/: Note  ai-usage-card.sty
git_hub_proj/python-project/data/seat_configs/: README.md  business.txt  economy.txt
git_hub_proj/python-project/src/: cli.py  main.py  seat_config.txt
git_hub_proj/python-project/src/file_handling/: loading_configs.py  reservation_database.py  reservation_service.py
git_hub_proj/python-project/src/file_handling/logs/: file_logger.py
git_hub_proj/python-project/src/login/: README.md  analyser.py  database.py  mailer.py  main.py  system.db
git_hub_proj/python-project/src/seat_data/: plane.py  price_data.py  reservation.py  seat.py
git_hub_proj/python-project/src/statistics/: chart_handler.py  creation_calls.py
git_hub_proj/python-project/src/testing/: admin_cancel.py  chart_creation.py  parsing_input.py
git_hub_proj/python-project/src/util/: currency_conversion.py  logger.py  system_tool.py
